--- a/app/src/main/res/layout/activity_loan_request_instruction.xml
+++ b/app/src/main/res/layout/activity_loan_request_instruction.xml
@@ -12,9 +12,21 @@
         android:layout_height="0dp"
         android:id="@+id/instructionsLayoutViewPager"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/instructionLayoutButtons"
+        app:layout_constraintBottom_toTopOf="@+id/instructionTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/instructionTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="rfrfgrgtggtg"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@id/instructionLayoutButtons"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -28,9 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/prevInstructionItemBtn"
-            android:text="Назад"
-            android:textColor="@drawable/transparent_button_white_text_selector"
-            android:background="@android:color/transparent"
+            android:text="@string/back"
+            style="@style/TransparentWhiteTextButton"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,9 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/nextInstructionItemBtn"
-            android:text="Далее"
-            android:textColor="@drawable/transparent_button_white_text_selector"
-            android:background="@android:color/transparent"
+            android:text="@string/next"
+            style="@style/TransparentWhiteTextButton"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -54,9 +64,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/finishInstructionsBtn"
-            android:text="Закрыть"
-            android:textColor="@drawable/transparent_button_white_text_selector"
-            android:background="@android:color/transparent"
+            android:text="@string/close"
+            style="@style/TransparentWhiteTextButton"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
