--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Как оформить заём?"
+            android:text="@string/how_to_get_loan"
             style="@style/Banner.Title.White"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/instructionsBtn"
-            android:text="подробнее"
+            android:text="@string/more"
             style="@style/CommonButton.White"
             android:layout_marginTop="100dp"
             android:layout_marginBottom="16dp"
@@ -70,7 +70,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Быстрые займы от 4%"
+            android:text="@string/fast_loans_percent"
             style="@style/Banner.Title.White"
             android:layout_marginTop="30dp"
             android:layout_marginRight="16dp"
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/getLoanBtn"
-            android:text="оформить"
+            android:text="@string/get_it"
             style="@style/CommonButton.White"
             android:textColor="@color/purple_500"
             android:layout_marginTop="100dp"
