--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_light_gray">#DADADA</color>
     <color name="light_gray">#B5B5B5</color>
     <color name="dark_gray">#4C4C4C</color>
+    <color name="dark_green">#248A00</color>
 </resources>
