--- a/app/src/main/res/layout/loan_personal_data_fragment.xml
+++ b/app/src/main/res/layout/loan_personal_data_fragment.xml
@@ -28,7 +28,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDataFirstNameTxt"
-                    android:text="Введите имя"
+                    android:text="@string/enter_first_name"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -38,7 +38,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDateEnterFirstNameEdtTxt"
-                    android:hint="First name"
+                    android:hint="@string/loan_first_name"
                     android:inputType="text"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -58,7 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPErsonalDataLastNameTxt"
-                    android:text="Введите фамилию"
+                    android:text="@string/enter_last_name"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -68,7 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDateEnterLastNameEdtTxt"
-                    android:hint="Second name"
+                    android:hint="@string/loan_last_name"
                     android:inputType="text"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
@@ -88,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDataPhoneNumberTxt"
-                    android:text="Введите номер телефона"
+                    android:text="@string/enter_phone_number"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
@@ -98,7 +98,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/loanPersonalDateEnterPhoneNumberEdtTxt"
-                    android:hint="Phone number"
+                    android:hint="@string/loan_phone_number"
                     android:inputType="phone"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
