--- a/app/src/main/res/layout/loans_list_item.xml
+++ b/app/src/main/res/layout/loans_list_item.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_loan_item_icon"
+        style="@style/Loans.MoneyImage"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="48dp"
         android:layout_marginLeft="16dp"
@@ -20,27 +20,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/loanItemTitleTxt"
-        android:text="Займ от 12.05.2022"
-        android:textSize="16sp"
+        style="@style/Loans.SmallText"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="60dp"
-        android:layout_marginLeft="65dp"
-        android:layout_marginRight="170dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/loanItemLoanStateTxt"
-        android:text="Одобрен"
-        android:textSize="18sp"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="65dp"
-        android:layout_marginRight="170dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,10 +34,25 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/loanItemLoanAmountTxt"
-        android:text="+ 15000 Р"
-        android:textSize="20sp"
-        android:layout_marginLeft="220dp"
-        android:layout_marginRight="16dp"
+        style="@style/Loans.BigText"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/loanItemLoanStateTxt"
+        style="@style/Loans.SmallText"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
