--- a/app/src/main/res/values/common_styles.xml
+++ b/app/src/main/res/values/common_styles.xml
@@ -58,6 +58,8 @@
         <item name="android:textColor">@color/purple_300</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:elevation">0dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
     </style>
 
     <style name="CommonActionBar.Back">
@@ -77,6 +79,13 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <style name="TransparentWhiteTextButton">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@drawable/transparent_button_white_text_selector</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
 </resources>
