Added content to instruction layout, provided error titles and messages to strings res, fixed issues with dialogs

--- a/app/src/main/res/layout/activity_loan_request_instruction.xml
+++ b/app/src/main/res/layout/activity_loan_request_instruction.xml
@@ -20,10 +20,10 @@
         android:id="@+id/instructionTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="rfrfgrgtggtg"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:gravity="center"
+        style="@style/Instruction.Title"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@id/instructionLayoutButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
