--- a/app/src/main/res/drawable/dark_purple_button_selector.xml
+++ b/app/src/main/res/drawable/dark_purple_button_selector.xml
@@ -2,6 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:state_enabled="false"
+        android:drawable="@drawable/dark_purple_button_disabled"/>
+
+    <item
         android:state_pressed="true"
         android:drawable="@drawable/dark_purple_button_pressed"/>
 
