--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -6,75 +6,87 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.LoginFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/registrationLinLay"
-        android:orientation="vertical"
-        android:layout_marginTop="80dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_height="match_parent">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/AuthorizationActivityStyle.Icon">
-
-        <ImageView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/AuthorizationActivityStyle.Icon"/>
+            android:layout_height="match_parent">
 
-        </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/registrationLinLay"
+                android:orientation="vertical"
+                android:layout_marginTop="80dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/registration"
-            style="@style/AuthorizationActivityStyle.Title"
-            android:layout_margin="20dp"/>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/AuthorizationActivityStyle.Icon">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/registrationNameEdtTxt"
-            android:hint="@string/username"
-            android:layout_margin="20dp"
-            android:inputType="text"
-            style="@style/CommonEditText"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    style="@style/AuthorizationActivityStyle.Icon"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/registrationPasswordEdtTxt"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:layout_margin="20dp"
-            style="@style/CommonEditText"/>
+                </androidx.cardview.widget.CardView>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/registrationBtn"
-            android:text="@string/sign_up"
-            style="@style/CommonButton.Purple"
-            android:layout_margin="20dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/registration"
+                    style="@style/AuthorizationActivityStyle.Title"
+                    android:layout_margin="20dp"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/have_account_already"
-            style="@style/AuthorizationActivityStyle.Text"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/registrationNameEdtTxt"
+                    android:hint="@string/username"
+                    android:layout_margin="20dp"
+                    android:inputType="text"
+                    style="@style/CommonEditText"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/openLoginFragmentBtn"
-            android:text="@string/authorize"
-            style="@style/CommonButton.White"
-            android:layout_margin="20dp"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/registrationPasswordEdtTxt"
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:layout_margin="20dp"
+                    style="@style/CommonEditText"/>
 
-    </LinearLayout>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/registrationBtn"
+                    android:text="@string/sign_up"
+                    style="@style/CommonButton.Purple"
+                    android:layout_margin="20dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/have_account_already"
+                    style="@style/AuthorizationActivityStyle.Text"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/openLoginFragmentBtn"
+                    android:text="@string/authorize"
+                    style="@style/CommonButton.White"
+                    android:layout_margin="20dp"/>
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
