--- a/app/src/main/res/values/home_styles.xml
+++ b/app/src/main/res/values/home_styles.xml
@@ -31,5 +31,17 @@
         <item name="android:background">@drawable/purple_rounded_recktangle</item>
     </style>
 
+    <style name="Instruction"></style>
+
+    <style name="Instruction.Title">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Instruction.CardView">
+        <item name="cardCornerRadius">20dp</item>
+    </style>
 
 </resources>
