Created splash screen activity, added info abount bank department addresses to loan details fragment

--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/userProfileNameTxt"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        style="@style/GrayText"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,8 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/exitAccountBtn"
-        android:text="exit account"
-        android:layout_margin="10dp"
+        android:text="@string/exit_account"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        style="@style/CommonButton.DarkPurple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
