--- a/app/src/main/res/values/common_styles.xml
+++ b/app/src/main/res/values/common_styles.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/purple_200</item>
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
     <style name="CommonAppStyle" parent="Theme.AppCompat.Light.NoActionBar">
 
     </style>
@@ -77,6 +82,13 @@
     <style name="WhiteText">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="GrayText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/dark_gray</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:gravity">center</item>
     </style>
