--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -81,8 +81,10 @@
                     android:text="@string/fast_loans_percent"
                     style="@style/Banner.Title.White"
                     android:layout_marginTop="30dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
                 <Button
