--- a/app/src/main/res/values-en/auth_strings.xml
+++ b/app/src/main/res/values-en/auth_strings.xml
@@ -5,7 +5,7 @@
     <string name="registration">Registration</string>
     <string name="sign_in">Sign in</string>
     <string name="sign_up">Sign up</string>
-    <string name="create_account">Создать аккаунт</string>
+    <string name="create_account">Create account</string>
     <string name="password">Pssword</string>
     <string name="username">Username</string>
     <string name="authorize">Sign in</string>
