--- a/app/src/main/res/values-en/auth_strings.xml
+++ b/app/src/main/res/values-en/auth_strings.xml
@@ -6,7 +6,7 @@
     <string name="sign_in">Sign in</string>
     <string name="sign_up">Sign up</string>
     <string name="create_account">Create account</string>
-    <string name="password">Pssword</string>
+    <string name="password">Password</string>
     <string name="username">Username</string>
     <string name="authorize">Sign in</string>
     <string name="have_account_already">Registered yet?</string>
